# Module_10_Home_Work_WEB

./: pyproject.toml
website_project/: db.sqlite3
website_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
website_project/quotes/migrations/: 0001_initial.py  0002_addauthor_addtag_addquote.py  0003_delete_addauthor_remove_addquote_author_and_more.py
website_project/quotes/static/quotes/: style.css
website_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_info.html  authors.html  base.html  index.html  quotes.html  quotes_by_tag.html  search_results.html
website_project/quotes/templatetags/: extract.py
website_project/users/: urls.py  views.py
website_project/users/templates/users/: login.html  logout.html  register.html
website_project/utils/: add_quotes_to_mongo.py  migration.py
website_project/website_project/: asgi.py  settings.py  urls.py  wsgi.py
